# RagForge

./: .gitignore  Dockerfile  README.md  app.py  config.yaml  docker-compose.yml  pyproject.toml
deploy/: docker-compose.yml  librechat.yaml  manage_services.sh
notebooks/agents/: 01_test_ollama_llm.ipynb  02_crewlai.ipynb  agent_playground.ipynb
notebooks/doc_processors/: 01_loader.ipynb
notebooks/mlflow/: explore_mlflow.ipynb
notebooks/openproject/: openproject_api.ipynb
notebooks/otel/: otel_instrumentation.ipynb
notebooks/phoenix/: observability_traces.ipynb
notebooks/postgres/: postgres_playground.ipynb
notebooks/qdrant/: 01_basic_crud.ipynb  02_chat_with_db.ipynb
notebooks/temporal/: temporal_playground.ipynb
scripts/: seed_sample_corpus.py
servers/: openproject_mcp.py  qdrant_mcp.py
src/ragforge/: __init__.py  api.py  config.py  session_store.py  worker.py
src/ragforge/agents/: __init__.py
src/ragforge/agents/rag/: __init__.py  agent.py  prompts.py
src/ragforge/chunking/: __init__.py  chunker.py
src/ragforge/embeddings/: embeddings.py
src/ragforge/index/: __init__.py  indexer.py
src/ragforge/ingestion/: __init__.py  models.py
src/ragforge/loader/: __init__.py  loader.py
src/ragforge/logging/: __init__.py  logger.py
src/ragforge/schemas/: __init__.py  chat_history.py  documents.py
src/ragforge/utils/: logging_hooks.py
src/ragforge/workflows/: ingestion.py  openproject.py
tests/: test_ingestion_pipeline.py  test_openproject_mcp.py  test_qdrant_mcp.py  test_rag_agent.py  test_session_store.py  test_workflows.py
(+28 files in other folders)
